--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfvUGLgP9ynAJPgO1Xdvv/",
+      "authorship_tag": "ABX9TyMvqy3sdcUstMaIy7BOSXIV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "tiv4OxG2-Am2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from scipy.integrate import solve_ivp"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Omega_m0 = 0.34\n",
+        "Omega_r0 = 0.01\n",
+        "Omega_DE0 = 0.65\n",
+        "\n",
+        "H_0 = 70\n",
+        "\n",
+        "w_0 = -1\n",
+        "w_a = 0.1"
+      ],
+      "metadata": {
+        "id": "UpgyZ87x_8iF"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
